corrected the html file

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         document.getElementById("play-btn").addEventListener("click", function() {
             this.style.display = "none";
             document.getElementById("game-container").style.display = "block";
-            setup();
+            startSenku();
         });
     </script>
 </body>
