corrected the html file

--- a/index.html
+++ b/index.html
@@ -28,9 +28,10 @@
         document.getElementById("play-btn").addEventListener("click", function() {
             this.style.display = "none";
             document.getElementById("game-container").style.display = "block";
-            startSenku();
+            startGame();
         });
     </script>
 </body>
 </html>
+
 
