corrected the js file

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </head>
 <body>
     <div id="game-container"></div>
-    <button id="play-btn">Play Senku!</button>
+    <button id="play-btn">SENKU!</button>
 	<script>
 		document.getElementById("play-btn").addEventListener("click", function() {
 			this.style.display = "none";
