changed reset botton to say Reset game

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body>
     <div id="game-container"></div>
     <button id="play-btn">PLAY SENKU</button>
-	<button id="reset-btn" style="position: fixed; bottom: 20px; right: 20px;">Reset</button>
+	<button id="reset-btn" style="position: fixed; bottom: 20px; right: 20px;">Reset game</button>
 	<script>
 		document.getElementById("play-btn").addEventListener("click", function() {
 			this.style.display = "none";
