Instruction added to the html file

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 <body>
     <div id="game-container"></div>
     <button id="play-btn">PLAY SENKU</button>
+	<p>Click a black square and drag it to an empty square, jumping over another black square. The goal is to leave only one black square on the board.</p>
 	<button id="reset-btn" style="position: fixed; bottom: 20px; right: 20px;">Reset game</button>
 	<script>
 		document.getElementById("play-btn").addEventListener("click", function() {
