Instruction added to the html file

--- a/index.html
+++ b/index.html
@@ -19,6 +19,13 @@
         #game-container {
             display: none;
         }
+        p {
+            font-family: Consolas, monospace;
+            font-size: 12px;
+            text-align: center;
+            margin-top: 10px;
+        }		
+		
     </style>
 </head>
 <body>
