Instruction added to the html file

--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
         #game-container {
             display: none;
         }
+        .button-container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }		
         p {
             font-family: Consolas, monospace;
             font-size: 12px;
@@ -30,8 +35,10 @@
 </head>
 <body>
     <div id="game-container"></div>
-    <button id="play-btn">PLAY SENKU</button>
-	<p>Click a black square and drag it to an empty square, jumping over another black square. The goal is to leave only one black square on the board.</p>
+	<div class="button-container">
+		<button id="play-btn">PLAY SENKU</button>
+		<p>Click a black square and drag it to an empty square, jumping over another black square. The goal is to leave only one black square on the board.</p>
+	</div>
 	<button id="reset-btn" style="position: fixed; bottom: 20px; right: 20px;">Reset game</button>
 	<script>
 		document.getElementById("play-btn").addEventListener("click", function() {
